playbooks/argocd/applications/home-automation/home-assistant/service.yaml
# playbooks/argocd/applications/home-automation/home-assistant/service.yaml
# Service for Home Assistant
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-automation
  labels:
    app: home-assistant
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.20.33
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
  selector:
    app: home-assistant
